# cmake-template

./: .gitignore  BlasFunctions.cmake  CMakeLists.txt  CMakeLists.txt.Fortran  CTestConfig.cmake.templ  CTestCustom.cmake.in  FindAtlasBLAS.cmake  FindBLAS-Atlas.cmake  FindBLAS-Generic.cmake  FindBLAS-Goto.cmake  FindBLAS-MKL.cmake  FindBLAS.cmake  FindGenericBLAS.cmake  FindGotoBLAS.cmake  FindLAPACK-MKL.cmake  FindLAPACK.cmake  FindMKLBLAS.cmake  INSTALL.rst  MathLibFunctions.cmake  README.rst  config.h.in  setup
Dashboard/: CDashTestBranch.cmake  CMakeLists.txt  cdash.run  cdash.run.in  run_dashboard.py.in
cdash/: CDashTestBranch.cmake  CMakeLists.txt  cdash.py.in
cmake/: CommonBuildTree.cmake  ConfigCXXCompilerFlags.cmake  ConfigCompilerFlags.cmake  ConfigGitRevision.cmake  ConfigPackaging.cmake  ConfigPackaging.cmake.templ  ConfigProjectVersion.cmake  ConfigTesting.cmake  ConfigureScript.cmake  FindBLAS.cmake  FindLAPACK.cmake  FindNetCDF.cmake  FindPython.cmake  FindXCFun.cmake  FortranNameManglingScheme.cmake  MathLibFunctions.cmake  UseGlobalBuildTree.cmake  bump-version.in
cmake/compilers/: CFlags.cmake  CXXFlags.cmake  FortranFlags.cmake
cmake/parallel-environment/: ConfigureParallelEnvironment.cmake  test-MPI-compiler-compatibility.F90
compilers/: CFlags.cmake  CXXFlags.cmake
contrib/: CompilationInfo.cmake  compilation_info.py.in  get_compiler_version.py  get_last_rev.py  git_revision_info.py.in
contrib/Fortran/: CMakeLists.txt  README.rst
contrib/Fortran/binary-info/: BinaryInfo.cmake  ConfigGitRevision.cmake  binary_info.py.in  get_compiler_version.py  get_static_size.py
contrib/Fortran/compilers/: CFlags.cmake  FortranFlags.cmake
contrib/Fortran/configuration-info/: ConfigInfo.cmake  compilation_info.py.in  get_compiler_version.py
contrib/Fortran/math/: ConfigGPUMath.cmake  FindBLAS.cmake  FindLAPACK.cmake
contrib/Fortran/parallel-environment/: ConfigParallelEnvironment.cmake  test-MPI-2-compatibility.F90  test-MPI-itype-compatibility.F90
src/: CMakeLists.txt  example.in
test/: CMakeLists.txt  test.py.in  test.sh.in
tests/: CMakeLists.txt
